Updated the obd_app.py script to meet all current application requirements. Removed the Plotly indicator on page one and replaced it with a simple useState. This adjustment improves performance and readability (runtime is no longer just displayed in seconds). Additionally, made minor optimizations, tweaked the animation speed for the temperature on the apex chart, and updated the readme file.

--- a/app/components/page1.module.css
+++ b/app/components/page1.module.css
@@ -55,6 +55,13 @@
   border-radius: 1rem;
   box-shadow: rgb(36, 36, 68) 0px 20px 30px -10px;
   background-color: var(--background-color-layer);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--background-color-2);
+  font-size: 2rem;
 }
+
 
 
